Email-Service, Refactoring and Update + Delete